// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem test suite: dataCy 1`] = `
<li
  className="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1p823my-MuiListItem-root"
  data-cy="custom"
  disabled={false}
  onClick={[Function]}
  style={
    {
      "cursor": "default",
    }
  }
>
  <div
    className="MuiListItemText-root css-tlelie-MuiListItemText-root"
    data-cy="custom-content"
  />
</li>
`;

exports[`ListItem test suite: default 1`] = `
<li
  className="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1p823my-MuiListItem-root"
  data-cy="list-item"
  disabled={false}
  onClick={[Function]}
  style={
    {
      "cursor": "default",
    }
  }
>
  <div
    className="MuiListItemText-root css-tlelie-MuiListItemText-root"
    data-cy="list-item-content"
  >
    <span>
      "List Item"
    </span>
  </div>
</li>
`;

exports[`ListItem test suite: dense 1`] = `
<li
  className="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding css-6lnq02-MuiListItem-root"
  data-cy="list-item"
  disabled={false}
  onClick={[Function]}
  style={
    {
      "cursor": "default",
    }
  }
>
  <div
    className="MuiListItemText-root MuiListItemText-dense css-tlelie-MuiListItemText-root"
    data-cy="list-item-content"
  />
</li>
`;

exports[`ListItem test suite: icon 1`] = `
<li
  className="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1p823my-MuiListItem-root"
  data-cy="list-item"
  disabled={false}
  onClick={[Function]}
  style={
    {
      "cursor": "default",
    }
  }
>
  <div
    className="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
      data-cy="list-item-icon"
      data-testid="AccountCircleIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
      />
    </svg>
  </div>
  <div
    className="MuiListItemText-root css-tlelie-MuiListItemText-root"
    data-cy="list-item-content"
  />
</li>
`;

exports[`ListItem test suite: loading 1`] = `
<li
  className="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1p823my-MuiListItem-root"
  data-cy="list-item"
  disabled={false}
  onClick={[Function]}
  style={
    {
      "cursor": "default",
    }
  }
>
  <div
    className="MuiListItemText-root css-tlelie-MuiListItemText-root"
    data-cy="list-item-content-loading"
  >
    <span
      className="MuiSkeleton-root MuiSkeleton-text MuiSkeleton-pulse css-1n7gpw1-MuiSkeleton-root"
      style={
        {
          "height": undefined,
          "width": undefined,
        }
      }
    />
  </div>
</li>
`;

exports[`ListItem test suite: onClick 1`] = `
<li
  className="MuiListItem-root MuiListItem-gutters MuiListItem-padding css-1p823my-MuiListItem-root"
  data-cy="list-item"
  disabled={false}
  onClick={[Function]}
  style={
    {
      "cursor": "pointer",
    }
  }
>
  <div
    className="MuiListItemText-root css-tlelie-MuiListItemText-root"
    data-cy="list-item-content"
  />
</li>
`;

exports[`ListItem test suite: selected 1`] = `
<li
  className="MuiListItem-root MuiListItem-gutters MuiListItem-padding Mui-selected css-1p823my-MuiListItem-root"
  data-cy="list-item"
  disabled={false}
  onClick={[Function]}
  style={
    {
      "cursor": "default",
    }
  }
>
  <div
    className="MuiListItemText-root css-tlelie-MuiListItemText-root"
    data-cy="list-item-content"
  />
</li>
`;
